--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "moment": "^2.29.4",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
